--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>My Resume</title>
-</head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My resume</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
 <body>
     
     <img src="./Snapchat-126455397 - Copy (2).jpg" width="200" />
